--- a/index.html
+++ b/index.html
@@ -2,22 +2,24 @@
 <html>
 	<head>
 		<title>Orlando Aguilar Vivanco</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
+				<!--
 	        	<li><a href="/about">About</a></li>
         		<li><a href="/cv">CV</a></li>
         		<li><a href="/blog">Blog</a></li>
-				<li><a href="/blog">Blog</a></li>
+				-->
+				<li><a href="Homework1/TesellationAndTwist.html">WebGL</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+        		<h1>Hi there, I'm Orlando Aguilar Vivanco!</h1>
+				<p>I am a game programmer; studying currently my MSCS at DigiPen with a focus in Game Development and graphics.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
