added new intries to porfolio, videos and orly

--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -2,24 +2,20 @@
 <html>
 	<head>
 		<title>Orlando Aguilar Vivanco</title>
-		<link rel="stylesheet" type="text/css" href="../css/main.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
         <div class="header">
             <nav>
                 <ul>
                     <li><a href="/index.html">Home</a></li>
-                    <li><a href="/Resume/Resume.html">Resume</a></li>
+                    <li><a href="Resume.html">Resume</a></li>
                     <li><a href="/Portfolio/Portfolio.html">Portfolio</a></li>
                 </ul>
             </nav>
         </div>
 		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Orlando Aguilar Vivanco!</h1>
-				<p>I am a game programmer; studying currently my MSCS at DigiPen with a focus in Game Development and graphics.</p>
-
-    		</div><!-- /.blurb -->
+            <iframe src="http://docs.google.com/gview?url=Resume.pdf&embedded=true" style="width:718px; height:700px;" frameborder="0"></iframe>
 		</div><!-- /.container -->
 		<footer>
     		<ul>
