--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Orlando Aguilar Vivanco</title>
-		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link rel="stylesheet" type="text/css" href="../css/main.css">
 	</head>
 	<body>
         <div class="header">
@@ -15,8 +15,9 @@
             </nav>
         </div>
 		<div class="container">
-            <iframe src="http://docs.google.com/gview?url=Resume.pdf&embedded=true" style="width:718px; height:700px;" frameborder="0"></iframe>
-		</div><!-- /.container -->
+            <iframe src="http://docs.google.com/gview?url=https://raw.githubusercontent.com/OrlandoAguilar/OrlandoAguilar.github.io/3d2f0d921ddf69aaf49739596f55166f483646df/Resume/Resume.pdf&embedded=true" style="width:718px; height:700px;" frameborder="0"></iframe>
+		
+        </div><!-- /.container -->
 		<footer>
     		<ul>
         		<li><a href="mailto:orlando.aguilar@digipen.edu">email</a></li>
