New projects to video portfolio

--- a/Portfolio/Portfolio.html
+++ b/Portfolio/Portfolio.html
@@ -32,8 +32,22 @@
         <p>Project videos</p>
         <nav>
             <ul>
-                <li><a href="Videos/ElAnimalario3dInteractiveBook/ElAnimalario.html">El animalario (interactive book)</a></li>
+                
                 <li><a href="Videos/Symibot/Symibot.html">Symibot (Robot simulator: C++, Qt, Bullet)</a></li>
+                <li><a href="Videos/ElAnimalario3dInteractiveBook/ElAnimalario.html">El animalario (interactive book)</a></li>
+                <li><a href="Videos/AndroidApp/AndroidApp.html">Android App for Arduino</a></li>
+                <li><a href="Videos/AStarOnCameraCapture/AStarOnCameraCapture.html">A Star and JPS+ on OpenCV-Camera Image</a></li>
+                <li><a href="Videos/BRDFMultitexture/BRDFMultitexture.html">BRDF and Multitexture (C++ and OpenGL)</a></li>
+                <li><a href="Videos/Chess/Chess.html">Chess (Java)</a></li>
+                <li><a href="Videos/ComponentBasedGameEngineAndGame/ComponentBasedGameEngineAndGame.html">Component based Game Engine and Videogame (OpenGL, WinAPI, C++)</a></li>
+                <li><a href="Videos/Criptography/Criptography.html">Steganography (Java and Image Processing)</a></li>
+                <li><a href="Videos/DotandLine/DotandLine.html">Dot and Line (El punto y la recta), interactive book in 2D</a></li>
+                <li><a href="Videos/InterpolationApp/InterpolationApp.html">Interpolation (C#, BSplines)</a></li>
+                <li><a href="Videos/NutirionSoft/NutritionSoft.html">NutritionSoft (Java, SQL with Derby)</a></li>
+                <li><a href="Videos/ScaraSimulator/ScaraSimulator.html">Scara Simulator (Robot simulator: C++, Qt, SDL)</a></li>
+                <li><a href="Videos/SnowballsChance/SnowallsChance.html">Snowball's chance (Videogame: C++, Opengl, Lua)</a></li>
+                <li><a href="Videos/VacunaC/VacunaC.html">VacunaC (Java, MySQL)</a></li>
+
             </ul>
         </nav>
     </div>
