--- a/Portfolio/Videos/BRDFMultitexture/BRDFMultitexture.html
+++ b/Portfolio/Videos/BRDFMultitexture/BRDFMultitexture.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Interactive Book</title>
+    <title>BRDF and Multitexture</title>
     <link rel="stylesheet" type="text/css" href="../../../css/main.css">
 </head>
 <body>
@@ -14,19 +14,17 @@
             </ul>
         </nav>
     </div>
-    <h1>Interactive Book (El animalario)</h1>
+    <h1>BRDF and Multitexture (C++ and OpenGL)</h1>
 
     <center>
         <div class="videoWrapper">
-            <iframe width="420" height="315" src="https://www.youtube.com/embed/5b8UQqPXHKg" frameborder="0" allowfullscreen></iframe>
+            <iframe width="420" height="315" src="https://www.youtube.com/embed/Vc_x7830Kk4" frameborder="0" allowfullscreen></iframe>
         </div><!-- /.container -->
     </center>
-    <p>This project is an electronic version of the book: "Animalario universal del profesor Revillod". This project was created during my bachelor's degree.</p>
+    <p>This is an example that I have developed about BRDF ligthing model and multitextures in OpenGL.</p>
 
-    <p>
-        In this project I was the programmer in charge of the 3D part and the physics.
-        For the physics, Bullet physics was used; for rendering the graphics, Irrlicht.
-    </p>
+    <p>The program modifies the texture coordinates of the clouds to achieve the animation.</p>
+    <p>The texture of night and day is selected and mixed according to the position of the light and the normals of the surface.</p>
 
     <footer>
         <ul>
