--- a/Portfolio/Videos/Symibot/Symibot.html
+++ b/Portfolio/Videos/Symibot/Symibot.html
@@ -25,7 +25,7 @@
     <p>
         also was in charge of researching, designing and programming the dynamics of the PUMA robot. Besides, I also designed and program part of the UI, the whole 3D graphics and physics systems and also created the some of the 3D models of the application.
         This project required some documentation, the SDD and the SRS. Both documents were built using the ISO standards.
-        The project lasted 6 months. It was developed for the Unversity “Universidad de Guadalajara” during my internship.
+        The project lasted 6 months. It was developed for the Unversity "Universidad de Guadalajara" during my internship.
         This project was created with the following technologies:
     </p>
     <div class="listTechnologies">
