--- a/Portfolio/Videos/Criptography/Criptography.html
+++ b/Portfolio/Videos/Criptography/Criptography.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Interactive Book</title>
+    <title>Steganography</title>
     <link rel="stylesheet" type="text/css" href="../../../css/main.css">
 </head>
 <body>
@@ -14,19 +14,26 @@
             </ul>
         </nav>
     </div>
-    <h1>Interactive Book (El animalario)</h1>
+    <h1>Steganography (Java and Image Processing)</h1>
 
     <center>
         <div class="videoWrapper">
-            <iframe width="420" height="315" src="https://www.youtube.com/embed/5b8UQqPXHKg" frameborder="0" allowfullscreen></iframe>
+            <iframe width="420" height="315" src="https://www.youtube.com/embed/xXoT5Epi5wI" frameborder="0" allowfullscreen></iframe>
         </div><!-- /.container -->
     </center>
-    <p>This project is an electronic version of the book: "Animalario universal del profesor Revillod". This project was created during my bachelor's degree.</p>
+    <p>This is a solo project of cryptography.</p>
 
-    <p>
-        In this project I was the programmer in charge of the 3D part and the physics.
-        For the physics, Bullet physics was used; for rendering the graphics, Irrlicht.
-    </p>
+    <p>This program is able to use the Feistel algorithm to encrypt a message and hide it in an image using a key (number) to choose the channel and the bit in the image to hide the information.</p>
+
+<p>The algorithm only works in the least significant bytes so that the image does not change its appearance at first  sight.</p>
+
+    <p>Technologies:</p>
+
+    <div class="listTechnologies">
+        <ul>
+            <li>Java</li>
+        </ul>
+    </div>
 
     <footer>
         <ul>
