--- a/Portfolio/Videos/InterpolationApp/InterpolationApp.html
+++ b/Portfolio/Videos/InterpolationApp/InterpolationApp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Interactive Book</title>
+    <title>Interpolation</title>
     <link rel="stylesheet" type="text/css" href="../../../css/main.css">
 </head>
 <body>
@@ -14,20 +14,33 @@
             </ul>
         </nav>
     </div>
-    <h1>Interactive Book (El animalario)</h1>
+    <h1>Interpolation (C#, BSplines)</h1>
 
     <center>
         <div class="videoWrapper">
-            <iframe width="420" height="315" src="https://www.youtube.com/embed/5b8UQqPXHKg" frameborder="0" allowfullscreen></iframe>
+            <iframe width="420" height="315" src="https://www.youtube.com/embed/IBPkxXtA1Y4" frameborder="0" allowfullscreen></iframe>
         </div><!-- /.container -->
     </center>
-    <p>This project is an electronic version of the book: "Animalario universal del profesor Revillod". This project was created during my bachelor's degree.</p>
+    <p>For this project, I have programmed all the interpolation algorithms in C#. They are:</p>
 
+    <div class="listTechnologies">
+        <ul>
+            <li>Newton interpolation</li>
+            <li>De Casteljau</li>
+            <li>Bernstein polynomials</li>
+            <li>Splines</li>
+            <li>Bezier curves</li>
+            <li>Mid-Point subdivision</li>
+        </ul>
+    </div>
     <p>
-        In this project I was the programmer in charge of the 3D part and the physics.
-        For the physics, Bullet physics was used; for rendering the graphics, Irrlicht.
+        Technologies:
     </p>
-
+    <div class="listTechnologies">
+        <ul>
+            <li>C#</li>
+        </ul>
+    </div>
     <footer>
         <ul>
             <li><a href="mailto:orlando.aguilar@digipen.edu">email</a></li>
