--- a/Portfolio/Portfolio.html
+++ b/Portfolio/Portfolio.html
@@ -21,6 +21,10 @@
         <nav>
             <ul>
                 <li><a href="Projects/Orly/Orly.html">Orly Game (Google Play) </a></li>
+                <li><a href="Projects/Criptography/Criptography.html">Steganography (Java and Image Processing)</a></li>
+                <li><a href="Projects/Humos/Humos.html">Humos (BennuGD, GPH)</a></li>
+                <li><a href="Projects/Catapult/Catapult.html">Catapult (BennuGD, Chipmunk physics engine)</a></li>
+                <li><a href="Projects/SpaceShipWar/SpaceShipWar.html">Space Ship War (XNA, C#)</a></li>
             </ul>
         </nav>
         <p>WebGL</p>
@@ -40,13 +44,14 @@
                 <li><a href="Videos/BRDFMultitexture/BRDFMultitexture.html">BRDF and Multitexture (C++ and OpenGL)</a></li>
                 <li><a href="Videos/Chess/Chess.html">Chess (Java)</a></li>
                 <li><a href="Videos/ComponentBasedGameEngineAndGame/ComponentBasedGameEngineAndGame.html">Component based Game Engine and Videogame (OpenGL, WinAPI, C++)</a></li>
-                <li><a href="Videos/Criptography/Criptography.html">Steganography (Java and Image Processing)</a></li>
                 <li><a href="Videos/DotandLine/DotandLine.html">Dot and Line (El punto y la recta), interactive book in 2D</a></li>
                 <li><a href="Videos/InterpolationApp/InterpolationApp.html">Interpolation (C#, BSplines)</a></li>
                 <li><a href="Videos/NutirionSoft/NutritionSoft.html">NutritionSoft (Java, SQL with Derby)</a></li>
                 <li><a href="Videos/ScaraSimulator/ScaraSimulator.html">Scara Simulator (Robot simulator: C++, Qt, SDL)</a></li>
                 <li><a href="Videos/SnowballsChance/SnowallsChance.html">Snowball's chance (Videogame: C++, Opengl, Lua)</a></li>
+                <li><a href="Videos/Spectogram/Spectogram.html">Spectogram (matlab)</a></li>
                 <li><a href="Videos/VacunaC/VacunaC.html">VacunaC (Java, MySQL)</a></li>
+                <li><a href="Videos/WaterSym/WaterSym.html">Water Symulation (Chipmunks, BennuGD)</a></li>
 
             </ul>
         </nav>
