--- a/Portfolio/Projects/Orly/Orly.html
+++ b/Portfolio/Projects/Orly/Orly.html
@@ -20,13 +20,7 @@
         <img src="sc2.png" alt="Screenshot Orly 2" style="width:512px;height:288px;">
     </center>
     <p>This is the first videogame that I have published in Google Play.</p>
-    <p>The videogame can be found in the following link:</p>
-
-
-    <a href="https://play.google.com/store/apps/details?id=orl.ag.orly">https://play.google.com/store/apps/details?id=orl.ag.orly</a>
-
-
-
+   
     <p>This project was created in Unity3D, using C#. I am the designer and programmer of the whole project.</p>
     <p>The assets such as sounds, music and graphics were found online (public domain) and adapted for the project.</p>
 
@@ -43,6 +37,11 @@
             <li>TapJoy</li>
         </ul>
     </div>
+
+    <h3>Download Section</h3>
+    <p><a href="https://play.google.com/store/apps/details?id=orl.ag.orly">Play Store</a></p>
+
+
     <footer>
         <ul>
             <li><a href="mailto:orlando.aguilar@digipen.edu">email</a></li>
