--- a/Portfolio/Videos/WaterSym/WaterSym.html
+++ b/Portfolio/Videos/WaterSym/WaterSym.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Steganography</title>
+    <title>Water Symulation</title>
     <link rel="stylesheet" type="text/css" href="../../../css/main.css">
 </head>
 <body>
@@ -14,24 +14,26 @@
             </ul>
         </nav>
     </div>
-    <h1>Steganography (Java and Image Processing)</h1>
+    <h1>Water Symulation (Chipmunks, BennuGD)</h1>
 
     <center>
         <div class="videoWrapper">
-            <iframe width="420" height="315" src="https://www.youtube.com/embed/xXoT5Epi5wI" frameborder="0" allowfullscreen></iframe>
+            <iframe width="420" height="315" src="https://www.youtube.com/embed/Pn-6ycGEfrk" frameborder="0" allowfullscreen></iframe>
         </div><!-- /.container -->
     </center>
-    <p>This is a solo project of cryptography.</p>
+    
 
-    <p>This program is able to use the Feistel algorithm to encrypt a message and hide it in an image using a key (number) to choose the channel and the bit in the image to hide the information.</p>
+    <p>This is a prototype of a water simulation using the particle theory.</p>
+   
+    <p>The physics iteration where developed with the help of the "Chipmunk Physics Engine" library and some personal code in C to simulate the behavior of the water with the particles.</p>
 
-<p>The algorithm only works in the least significant bytes so that the image does not change its appearance at first  sight.</p>
-
-    <p>Technologies:</p>
-
+    <p>
+        Technologies:
+    </p>
     <div class="listTechnologies">
         <ul>
-            <li>Java</li>
+            <li>BennuGD</li>
+            <li>Chipmunk physics engine</li>
         </ul>
     </div>
 
