added orly repository, signals and slots and other pages

--- a/Portfolio/Portfolio.html
+++ b/Portfolio/Portfolio.html
@@ -21,10 +21,12 @@
         <nav>
             <ul>
                 <li><a href="Projects/Orly/Orly.html">Orly Game (Google Play) </a></li>
+                <li><a href="Projects/SignalsSlots/SignalsSlots.html">Signals and Slots (C++ implementations)</a></li>
                 <li><a href="Projects/Criptography/Criptography.html">Steganography (Java and Image Processing)</a></li>
                 <li><a href="Projects/Humos/Humos.html">Humos (BennuGD, GPH)</a></li>
                 <li><a href="Projects/Catapult/Catapult.html">Catapult (BennuGD, Chipmunk physics engine)</a></li>
                 <li><a href="Projects/SpaceShipWar/SpaceShipWar.html">Space Ship War (XNA, C#)</a></li>
+                <li><a href="Projects/JOVCalendar/JOVCalendar.html">Java Calendar Implementation</a></li>
             </ul>
         </nav>
         <p>WebGL</p>
