--- a/Portfolio/Projects/Orly/Orly.html
+++ b/Portfolio/Projects/Orly/Orly.html
@@ -27,8 +27,9 @@
     <p>
         This personal project was developed during approximately 4 months. During this time I learnt how to use the engine, designed the levels, some art, and typed the code.
         The project is able to publish directly to the Facebook account of the user (using the Facebook API), uses the accelerometer to modify the gravity and the touch screen to control the forces.
-        Technologies:
     </p>
+    <p>Technologies:</p>
+    
     <div class="listTechnologies">
         <ul>
             <li>C#</li>
@@ -38,9 +39,11 @@
         </ul>
     </div>
 
-    <h3>Download Section</h3>
-    <p><a href="https://play.google.com/store/apps/details?id=orl.ag.orly">Play Store</a></p>
+    <p>I am publishing not only the game, but also the source code in a GitHub repository.</p>
 
+    <h3>Download Section</h3>
+    <p><a href="https://play.google.com/store/apps/details?id=orl.ag.orly">Go to Play Store</a></p>
+    <p><a href="https://github.com/OrlandoAguilar/Orly">Go to the repository</a></p>
 
     <footer>
         <ul>
