--- a/Portfolio/Projects/SignalsSlots/SignalsSlots.html
+++ b/Portfolio/Projects/SignalsSlots/SignalsSlots.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Space Ship War</title>
+    <title>Signals and Slots</title>
     <link rel="stylesheet" type="text/css" href="../../../css/main.css">
 </head>
 <body>
@@ -14,31 +14,26 @@
             </ul>
         </nav>
     </div>
-    <h1>Space Ship War (XNA, C#)</h1>
+    <h1>Signals and Slots (C++ implementations)</h1>
 
-    <center>
-        <div class="videoWrapper">
-            <iframe width="420" height="315" src="https://www.youtube.com/embed/XjBCG39j6u4" frameborder="0" allowfullscreen></iframe>
-        </div><!-- /.container -->
-    </center>
-    <p>This project was my first approach to XNA and C#.</p>
+    <p>Signals and Slots implementation in c++ using only standar c++.</p>
 
-    <p>In this project, I not only programmed every thing, but also made each 3D model using blender.</p>
+    <p>I am distributing the code under the Apache 2.0 License, so that you can use it in your own projects without problems.</p>
 
-    <p>The sounds, music and background were public domain resources found online.</p>
+    <p>In the repository you will find an example of usage (Example.cpp) and the required headers.</p>
+
 
     <p>Technologies:</p>
 
     <div class="listTechnologies">
         <ul>
-            <li>C#</li>
-            <li>XNA</li>
+            <li>C++</li>
         </ul>
     </div>
 
     <h3>Download Section</h3>
 
-    <p><a href="https://github.com/OrlandoAguilar/SpaceShipWar">Go to the repository</a></p>
+    <p><a href="https://github.com/OrlandoAguilar/SignalSlot">Go to the repository</a></p>
 
     <footer>
         <ul>
