added linkedin information and changed colors to urls

--- a/index.html
+++ b/index.html
@@ -18,9 +18,15 @@
     		<div class="blurb">
         		<h1>Hi there, I'm Orlando Aguilar Vivanco!</h1>
 				<p>I am a game programmer; studying currently my MSCS at DigiPen with a focus in Game Development and graphics.</p>
-
+            <p>
+                My goal is to work in Computer graphics, Game development and Virtual/Augmented reality.
+                My knowledge in Game development, Image and Signal processing and 3D graphics are excellent assets to support me in achieving my goal.
+            </p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
+
+        <p><a href="https://www.linkedin.com/pub/orlando-aguilar/93/804/70">Go to my LinkedIn profile.</a></p>
+
 		<footer>
     		<ul>
         		<li><a href="mailto:orlando.aguilar@digipen.edu">email</a></li>
