--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -18,6 +18,11 @@
             <iframe src="http://docs.google.com/gview?url=https://raw.githubusercontent.com/OrlandoAguilar/OrlandoAguilar.github.io/3d2f0d921ddf69aaf49739596f55166f483646df/Resume/Resume.pdf&embedded=true" style="width:718px; height:700px;" frameborder="0"></iframe>
 		
         </div><!-- /.container -->
+
+        <h3>LinkedIn</h3>
+        <p><a href="https://www.linkedin.com/pub/orlando-aguilar/93/804/70">Go to my profile.</a></p>
+        
+
 		<footer>
     		<ul>
         		<li><a href="mailto:orlando.aguilar@digipen.edu">email</a></li>
