--- a/Portfolio/Portfolio.html
+++ b/Portfolio/Portfolio.html
@@ -15,9 +15,9 @@
         </nav>
     </div>
     <h1>Portfolio</h1>
-
+     
     <div class="listUrls">
-        <p>Projects with downloads</p>
+        <h2>Projects with downloads</h2>
         <nav>
             <ul>
                 <li><a href="Projects/Orly/Orly.html">Orly Game (Google Play) </a></li>
@@ -29,13 +29,13 @@
                 <li><a href="Projects/JOVCalendar/JOVCalendar.html">Java Calendar Implementation</a></li>
             </ul>
         </nav>
-        <p>WebGL</p>
+        <h2>WebGL</h2>
         <nav>
             <ul>
                 <li><a href="WebGL/TesellationAndTwist/TesellationAndTwist.html">Tesellation and Twist</a></li>
             </ul>
         </nav>
-        <p>Project videos</p>
+        <h2>Project videos</h2>
         <nav>
             <ul>
                 
