--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<title>Orlando Aguilar Vivanco</title>
 		<link rel="stylesheet" type="text/css" href="../css/main.css">
-	</head>
+        <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+    </head>
 	<body>
         <div class="header">
             <nav>
