new homework, paint

--- a/Portfolio/Portfolio.html
+++ b/Portfolio/Portfolio.html
@@ -32,7 +32,8 @@
         <h2>WebGL</h2>
         <nav>
             <ul>
-                <li><a href="WebGL/TesellationAndTwist/TesellationAndTwist.html">Tesellation and Twist</a></li>
+                <li><a href="WebGL/TesellationAndTwist/TesellationAndTwist.html">Tessellation and Twist</a></li>
+                <li><a href="WebGL/Paint/Paint.html">Paint</a></li>
             </ul>
         </nav>
         <h2>Project videos</h2>
