--- a/Portfolio/Projects/SignalsSlots/SignalsSlots.html
+++ b/Portfolio/Projects/SignalsSlots/SignalsSlots.html
@@ -16,7 +16,7 @@
     </div>
     <h1>Signals and Slots (C++ implementations)</h1>
 
-    <p>Signals and Slots implementation in c++ using only standar c++.</p>
+    <p>Signals and Slots implementation in C++ using only standar C++.</p>
 
     <p>I am distributing the code under the Apache 2.0 License, so that you can use it in your own projects without problems.</p>
 
