--- a/Portfolio/WebGL/Paint/Paint.html
+++ b/Portfolio/WebGL/Paint/Paint.html
@@ -2,43 +2,33 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-    <title>Tessellation and Twist</title>
+    <title>Paint</title>
     <link rel="stylesheet" type="text/css" href="../../../css/main.css">
+
     <script id="vertex-shader" type="x-shader/x-vertex">
         attribute vec4 vPosition;
-        uniform float angle;
-        uniform float scale;
 
         void
         main()
         {
-
-        vec4 pos=vPosition;
-
-        float dist=length(vPosition);
-
-        float ct=cos(dist*angle);
-        float st=sin(dist*angle);
-        pos.x=(vPosition.x*ct-vPosition.y*st)*scale;
-        pos.y=(vPosition.x*st+vPosition.y*ct)*scale;
-        pos.z=0.0; pos.w=1.0;
-
-        gl_Position = pos;
+        gl_Position = vPosition;
         }
     </script>
     <script id="fragment-shader" type="x-shader/x-fragment">
         precision mediump float;
 
+        uniform vec4 color;
         void
         main()
         {
-        gl_FragColor = vec4( 1.0, 0.0, 0.0, 1.0 );
+        gl_FragColor = color;
         }
     </script>
     <script type="text/javascript" src="../Common/webgl-utils.js"></script>
     <script type="text/javascript" src="../Common/initShaders.js"></script>
     <script type="text/javascript" src="../Common/MV.js"></script>
-    <script type="text/javascript" src="TesellationAndTwist.js"></script>
+    <script type="text/javascript" src="Paint.js"></script>
+    <script type="text/javascript" src="../Common/jscolor/jscolor.js"></script>
 </head>
 <body>
     <div class="header">
@@ -50,7 +40,7 @@
             </ul>
         </nav>
     </div>
-    <h1>Tessellation and Twist</h1>
+    <h1>Paint</h1>
 
     <canvas id="gl-canvas" width="512" height="512">
         Oops ... your browser doesn't support the HTML5 canvas element
@@ -60,19 +50,12 @@
         <fieldset class="fieldset-auto-width">
             <legend>Parameters:</legend>
             <div>
-                tesellation  0 <input id="tesellationSlider" type="range"
-                                      min="0" max="5" step="1" value="5" />
-                5
+                Brush color: <input class="color" value="66ff00" id="colorPicker">
             </div>
             <div>
-                angle  -2&#928;<input id="angleSlider" type="range"
-                                      min="-6.28" max="6.28" step="0.0628" value="6.0" />
-                2&#928;
-            </div>
-            <div>
-                scale 1<input id="scaleSlider" type="range"
-                              min="1" max="5" step="0.1" value="1" />
-                1/5
+                Brush thickness: 1<input id="thicknesSlider" type="range"
+                              min="1" max="30" step="1" value="10" />
+                30
             </div>
         </fieldset>
     </form>
