--- a/Portfolio/Videos/ComponentBasedGameEngineAndGame/ComponentBasedGameEngineAndGame.html
+++ b/Portfolio/Videos/ComponentBasedGameEngineAndGame/ComponentBasedGameEngineAndGame.html
@@ -38,7 +38,7 @@
             <li>FMOD</li>
 </ul>
     </div>
-    <p>Some screenshoots.</p>
+    <p>Some screenshots.</p>
 
     <center>
         <img src="map1.png" alt="First Experiment" style="width:512px;height:288px;">
