--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
 		<title>Orlando Aguilar Vivanco</title>
@@ -26,7 +26,7 @@
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 
-        <p><a href="https://www.linkedin.com/pub/orlando-aguilar/93/804/70">Go to my LinkedIn profile.</a></p>
+        <p><a href="https://www.linkedin.com/in/orlandoaguilarvivanco">Go to my LinkedIn profile.</a></p>
 
 		<footer>
     		<ul>
