--- a/Portfolio/WebGL/GJK/GJK.html
+++ b/Portfolio/WebGL/GJK/GJK.html
@@ -3,14 +3,15 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <meta name="description" content="WebGL">
-    <meta name="keywords" content="WebGL,3D,Portfolio,JavaScript,Programming,CAD">
+    <meta name="keywords" content="WebGL,3D,Portfolio,JavaScript,Programming,GJK,collision detection">
     <meta name="author" content="Orlando Aguilar Vivanco">
-    <!--
-    <meta http-equiv="Chache-Control" content="no-cache,no-store,must-revalidate"/>
+    
+   <!-- <meta http-equiv="Chache-Control" content="no-cache,no-store,must-revalidate"/>
     <meta http-equiv="Pragma" content="no-cache"/>
     <meta http-equiv="Expires" content="0"/>
-        -->
-    <title>Cad-Like Application</title>
+   -->
+
+    <title>GJK</title>
     <link rel="stylesheet" type="text/css" href="../../../css/main.css">
     <link rel="stylesheet" href="../Common/jquery-ui-1.11.4.custom/jquery-ui.min.css">
     <script id="vertex-shader" type="x-shader/x-vertex">
@@ -54,7 +55,8 @@
     <script type="text/javascript" src="../Common/webgl-utils.js"></script>
     <script type="text/javascript" src="../Common/initShaders.js"></script>
     <script type="text/javascript" src="../Common/MV2.js"></script>
-    <script type="text/javascript" src="CadLike1.js"></script>
+    <script type="text/javascript" src="GJK.js"></script>
+    <script type="text/javascript" src="main.js"></script>
     <script type="text/javascript" src="../Common/jscolor/jscolor.js"></script>
     <script type="text/javascript" src="../Common/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="../Common/jquery-ui-1.11.4.custom/jquery-ui.min.js"></script>
@@ -70,7 +72,7 @@
             </ul>
         </nav>
     </div>
-    <h1>Cad-Like Application</h1>
+    <h1>GJK Collision Detection</h1>
 
     <canvas id="gl-canvas" width="512" height="512">
         Oops ... your browser doesn't support the HTML5 canvas element
