--- a/Portfolio/WebGL/Paint/Paint.html
+++ b/Portfolio/WebGL/Paint/Paint.html
@@ -26,7 +26,7 @@
     </script>
     <script type="text/javascript" src="../Common/webgl-utils.js"></script>
     <script type="text/javascript" src="../Common/initShaders.js"></script>
-    <script type="text/javascript" src="../Common/MV.js"></script>
+    <script type="text/javascript" src="../Common/MV2.js"></script>
     <script type="text/javascript" src="Paint.js"></script>
     <script type="text/javascript" src="../Common/jscolor/jscolor.js"></script>
 </head>
