--- a/Portfolio/Portfolio.html
+++ b/Portfolio/Portfolio.html
@@ -32,7 +32,7 @@
         <h2>WebGL</h2>
         <nav>
             <ul>
-                <li><a href="WebGL/EPA/">EPA algorithm(8/11/2015)</a></li>
+                <li><a href="WebGL/EPA/EPA.html">EPA algorithm(8/11/2015)</a></li>
                 <li><a href="WebGL/GJK/GJK.html">GJK collision detection algorithm (8/10/2015)</a></li>
                 <li><a href="WebGL/CadLike1/CadLike1.html">Cad-Like Application (8/9/2015)</a></li>
                 <li><a href="WebGL/Paint/Paint.html">Paint (7/25/2015)</a></li>
