--- a/Portfolio/Portfolio.html
+++ b/Portfolio/Portfolio.html
@@ -32,6 +32,7 @@
         <h2>WebGL</h2>
         <nav>
             <ul>
+                <li><a href="WebGL/Lights/Lights.html">Lights(8/16/2015)</a></li>
                 <li><a href="WebGL/EPA/EPA.html">EPA algorithm(8/11/2015)</a></li>
                 <li><a href="WebGL/GJK/GJK.html">GJK collision detection algorithm (8/10/2015)</a></li>
                 <li><a href="WebGL/CadLike1/CadLike1.html">Cad-Like Application (8/9/2015)</a></li>
