--- a/Portfolio/WebGL/Lights/Lights.html
+++ b/Portfolio/WebGL/Lights/Lights.html
@@ -3,12 +3,14 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <meta name="description" content="WebGL">
-    <meta name="keywords" content="WebGL,3D,Portfolio,JavaScript,Programming,CAD">
+    <meta name="keywords" content="WebGL,3D,Portfolio,JavaScript,Programming,Lights,Phong-Blin,Spot,Directional,Point">
     <meta name="author" content="Orlando Aguilar Vivanco">
     
+    <!--
     <meta http-equiv="Chache-Control" content="no-cache,no-store,must-revalidate"/>
     <meta http-equiv="Pragma" content="no-cache"/>
     <meta http-equiv="Expires" content="0"/>
+     -->   
         
     <title>Lights</title>
     <link rel="stylesheet" type="text/css" href="../../../css/main.css">
@@ -146,9 +148,9 @@
     <script type="text/javascript" src="../Common/webgl-utils.js"></script>
     <script type="text/javascript" src="../Common/initShaders.js"></script>
     <script type="text/javascript" src="../Common/MV2.js"></script>
-    <script type="text/javascript" src="Utility.js?4"></script>
-    <script type="text/javascript" src="Models.js?4"></script>
-    <script type="text/javascript" src="Lights.js?5"></script>
+    <script type="text/javascript" src="../Common/Utility.js"></script>
+    <script type="text/javascript" src="../Common/Models.js"></script>
+    <script type="text/javascript" src="Lights.js"></script>
     <script type="text/javascript" src="../Common/jscolor/jscolor.js"></script>
     <script type="text/javascript" src="../Common/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="../Common/jquery-ui-1.11.4.custom/jquery-ui.min.js"></script>
