--- a/Portfolio/WebGL/Texturization/Texturization.html
+++ b/Portfolio/WebGL/Texturization/Texturization.html
@@ -5,11 +5,12 @@
     <meta name="description" content="WebGL">
     <meta name="keywords" content="WebGL,3D,Portfolio,JavaScript,Programming,BRDF,texturization">
     <meta name="author" content="Orlando Aguilar Vivanco">
-
+    <!--
     <meta http-equiv="Chache-Control" content="no-cache,no-store,must-revalidate"/>
     <meta http-equiv="Pragma" content="no-cache"/>
     <meta http-equiv="Expires" content="0"/>
-    
+    -->
+
     <title>BRDF and Texturization</title>
     <link rel="stylesheet" type="text/css" href="../../../css/main.css">
     <link rel="stylesheet" href="../Common/jquery-ui-1.11.4.custom/jquery-ui.min.css">
@@ -129,12 +130,15 @@
         varying vec2 texCoord;
         varying vec3 normalVec, eyeVec;
 
+        const float force=10.0;
+
         void main()
         {
         texCoord = vUV;
         normalVec = normalize(normalMatrix*vNormals);
-        float tf=vUV.t*M_PI*8.0;
-        vec3 phase=0.03*normalVec*sin(time*40.0+tf);
+        float tf=vUV.t*M_PI*force;
+        float sf=vUV.s*M_PI*force;
+        vec3 phase=0.03*normalVec*sin(time*40.0+tf)*cos(time*40.0+sf);
         vec3 worldVertex = vec3(modelMatrix * vec4(vPosition.xyz+phase,1));
         eyeVec=vec3(viewInverseMatrix[3].xyz)-worldVertex;
         gl_Position = projectionMatrix*viewMatrix*vec4(worldVertex,1);
@@ -199,9 +203,9 @@
     <div class="left">
         <form>
             <fieldset class="fieldset-auto-width">
-                <legend>Camera:</legend>
+                <legend>Sun:</legend>
                 <div>
-                    <label for="radius">radius</label>
+                    <label for="radius">distance</label>
                     <input id="radius" name="radius" value="5" style="width:80px">
                 </div>
 
