--- a/index.html
+++ b/index.html
@@ -17,13 +17,25 @@
         </div>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Orlando Aguilar Vivanco!</h1>
-				<p>I am a game programmer; studying currently my MSCS at DigiPen with a focus in Game Development and graphics.</p>
-            <p>
-                My goal is to work in Computer graphics, Game development and Virtual/Augmented reality.
-                My knowledge in Game development, Image and Signal processing and 3D graphics are excellent assets to support me in achieving my goal.
-            </p>
-    		</div><!-- /.blurb -->
+        		<h1>Hi, I'm Orlando Aguilar Vivanco!</h1>
+				<p>I am a game programmer; studying currently an MSCS at DigiPen with a focus in Game Development and graphics.</p>
+                
+                <p>My expertise is in image processing and game development.</p>
+                <p>
+                    Leader and designer of several tasks in programming projects, some of them can be found in my <a href="/Portfolio/Portfolio.html">Portfolio</a>.
+                </p>
+                <p>
+                    I have also published recently an article in IEEE entitled <a href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=7222843&filter%3DAND(p_IS_Number%3A7222827)">Characterization of Nanotube Structures Using Digital-Segmented Images</a>, about using image processing to measure the thickness of nanotubes.
+                </p>
+                <p>
+                    I have successfully applied image processing techniques to video games in physics and graphics.
+                </p>
+                <p>
+                    Currently I am working in a new video games which uses oculus. I am the platform engineer in this project, I have worked in the graphics engine, the windows system, the scripting and the oculus integration. Besides, I am one of the game designers in this project, working with another very good designer five programmers one 2D artist and one sound designer.
+                </p>
+                <p>Personally, I enjoy working hard, making video games, researching and getting along with everyone.</p>
+
+</div><!-- /.blurb -->
 		</div><!-- /.container -->
 
         <p><a href="https://www.linkedin.com/in/orlandoaguilarvivanco">Go to my LinkedIn profile.</a></p>
